apps/media-automation-proxy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-external
  namespace: homelab
spec:
  ports:
    - name: http
      port: 17878
      protocol: TCP
      targetPort: 17878
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: radarr-external
  namespace: homelab
subsets:
  - addresses:
      - ip: 10.0.0.100
    ports:
      - name: http
        port: 17878
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-external
  namespace: homelab
spec:
  ports:
    - name: http
      port: 18989
      protocol: TCP
      targetPort: 18989
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sonarr-external
  namespace: homelab
subsets:
  - addresses:
      - ip: 10.0.0.100
    ports:
      - name: http
        port: 18989
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: seerr-external
  namespace: homelab
spec:
  ports:
    - name: http
      port: 15055
      protocol: TCP
      targetPort: 15055
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: seerr-external
  namespace: homelab
subsets:
  - addresses:
      - ip: 10.0.0.100
    ports:
      - name: http
        port: 15055
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-external
  namespace: homelab
spec:
  ports:
    - name: http
      port: 19696
      protocol: TCP
      targetPort: 19696
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: prowlarr-external
  namespace: homelab
subsets:
  - addresses:
      - ip: 10.0.0.100
    ports:
      - name: http
        port: 19696
        protocol: TCP
